--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="user_rating">User Rating</string>
     <string name="release_date">Release date</string>
     <string name="trailers">Trailers</string>
+    <string name="reviews">Reviews</string>
 </resources>
