--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     </string>
     <string name="set_order_popular">Order by popular</string>
     <string name="set_order_top_rated">Order by top rated</string>
+    <string name="set_show_favorites">Show favorites</string>
     <string name="user_rating">User Rating</string>
     <string name="release_date">Release date</string>
     <string name="trailers">Trailers</string>
